[package]
name = "pubky-crypto"
version = "0.1.0"
edition = "2021"
description = "Pure cryptographic primitives for the Pubky ecosystem: SB2, UKD, KDF, X25519/Ed25519 helpers"

[features]
default = []
secure-mem = ["region"]

[dependencies]
x25519-dalek = "2"
ed25519-dalek = "2"
curve25519-dalek = "4"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
blake3 = "1.5"
base64 = "0.22"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
zeroize = "1"
thiserror = "1"
hex = "0.4"
region = { version = "3", optional = true }
